--- a/patch-place-break/patch-place-break-core/src/main/resources/config.yml
+++ b/patch-place-break/patch-place-break-core/src/main/resources/config.yml
@@ -2,9 +2,9 @@
 ### JobsReborn-PatchPlaceBreak ###
 ##################################
 
-# Define where to store and retrieve patch tags.
+# Define where to store and retrieve data.
 dataSource:
-  # The database manager to use.
+  # The type of datasource to use.
   # Available values:
   # - SQLITE: use a local file as database (easy setup)
   # - MYSQL: use a MySQL database server (better performances)
@@ -13,7 +13,8 @@ dataSource:
   # The table name where data will be stored.
   table: 'patch_place_break_tag'
 
-  # If type is set to 'SQLITE', dbmsServer part can be ignored.
+  # The DBMS server properties to establish connections.
+  # If type is set to 'SQLITE', this part can be safely ignored.
   dbmsServer:
     host:
       hostname: 'localhost'
@@ -23,3 +24,18 @@ dataSource:
       username: 'username'
       password: 'password'
     database: 'patch_place_break'
+
+  # Connection pool properties.
+  # This is reserved for advanced usage only.
+  # Change these settings only if you know what you are doing.
+  connectionPool:
+    # The connection timeout in milliseconds.
+    # Corresponds to the maximum time the connection pool will wait to acquire a new connection
+    # from the DBMS server.
+    # Not applicable for SQLite.
+    connectionTimeout: 30000
+
+    # The number of DBMS connections in the pool.
+    # Could be best determined by the executing environment.
+    poolSize: 10
+
