--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -54,40 +54,25 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.github.Zrips</groupId>
+        <artifactId>Jobs</artifactId>
+        <version>${jobsReborn.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>${mysql.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.bstats</groupId>
         <artifactId>bstats-bukkit</artifactId>
         <version>${bstat.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.spongepowered</groupId>
-        <artifactId>configurate-yaml</artifactId>
-        <version>${configurate.version}</version>
-      </dependency>
-      <!-- The JobsReborn plugin must be installed on the Bukkit server -->
-      <dependency>
-        <groupId>com.github.Zrips</groupId>
-        <artifactId>Jobs</artifactId>
-        <version>${jobsReborn.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <!--
-        The MySQL JDBC client is provided by the CraftBukkit server implementation
-        Ideally we should not depend on implementation details, but permits here to save
-        ~10 Mo of size which at final permit to upload the plugin into the Spigot website.
-      -->
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>${mysql.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <!-- The server must provide at least the Spigot API (not only Bukkit) -->
-      <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
         <version>${spigotApi.version}</version>
-        <scope>provided</scope>
-        <!-- Exclude all unused dependencies -->
+        <!-- Unused dependencies -->
         <exclusions>
           <exclusion>
             <groupId>com.google.code.gson</groupId>
@@ -113,18 +98,17 @@
             <groupId>org.avaje</groupId>
             <artifactId>ebean</artifactId>
           </exclusion>
-          <exclusion>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-          </exclusion>
         </exclusions>
       </dependency>
-      <!-- Same logic followed here than for the MySQL client dependency -->
+      <dependency>
+        <groupId>org.spongepowered</groupId>
+        <artifactId>configurate-yaml</artifactId>
+        <version>${configurate.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
         <version>${sqlite.version}</version>
-        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
