--- a/patch-place-break/patch-place-break-internal/pom.xml
+++ b/patch-place-break/patch-place-break-internal/pom.xml
@@ -45,10 +45,12 @@
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
       <artifactId>patch-place-break-api</artifactId>
       <version>${project.version}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.google.errorprone</groupId>
