--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
     <sonarMavenPlugin.version>3.9.1.2184</sonarMavenPlugin.version>
 
     <!-- ==================== Dependencies versions ==================== -->
+    <checkerframework.version>3.8.0</checkerframework.version>
     <commonsLang3.version>3.12.0</commonsLang3.version>
     <configurate.version>4.1.2</configurate.version>
     <equalsverifier.version>3.12.3</equalsverifier.version>
@@ -151,9 +152,19 @@
         <version>${commonsLang3.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker-qual</artifactId>
+        <version>${checkerframework.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.spongepowered</groupId>
+        <artifactId>configurate-core</artifactId>
+        <version>${configurate.version}</version>
       </dependency>
       <dependency>
         <groupId>org.spongepowered</groupId>
@@ -326,6 +337,22 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>${mavenDependencyPlugin.version}</version>
+        <configuration>
+          <failBuild>true</failBuild>
+          <failOnWarning>true</failOnWarning>
+          <ignoreUnusedRuntime>true</ignoreUnusedRuntime>
+        </configuration>
+        <executions>
+          <execution>
+            <id>analyse</id>
+            <goals>
+              <goal>analyze</goal>
+              <goal>analyze-dep-mgt</goal>
+              <goal>analyze-duplicate</goal>
+            </goals>
+            <phase>test-compile</phase>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
