--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -59,8 +59,8 @@
         <version>${jobsReborn.version}</version>
       </dependency>
       <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
         <version>${mysql.version}</version>
       </dependency>
       <dependency>
