--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
     <mockito.version>4.10.0</mockito.version>
     <mysql.version>8.0.31</mysql.version>
     <slf4j.version>2.0.6</slf4j.version>
+    <snakeyaml.version>1.28</snakeyaml.version>
     <sqlite.version>3.40.0.0</sqlite.version>
     <toStringVerifier.version>1.4.8</toStringVerifier.version>
   </properties>
@@ -210,6 +211,11 @@
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
         <version>${sqlite.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
