--- a/bukkit/bukkit-plugin/pom.xml
+++ b/bukkit/bukkit-plugin/pom.xml
@@ -57,7 +57,7 @@
     </dependency>
     <dependency>
       <groupId>fr.djaytan.minecraft.jobsreborn.patchplacebreak</groupId>
-      <artifactId>bukkit-patch-adapter</artifactId>
+      <artifactId>bukkit-listener</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
@@ -102,40 +102,24 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.Zrips</groupId>
-      <artifactId>Jobs</artifactId>
-      <scope>provided</scope>
-      <!-- Server must have JobsReborn plugin installed -->
-    </dependency>
-    <dependency>
-      <groupId>com.google.errorprone</groupId>
-      <artifactId>error_prone_annotations</artifactId>
-      <scope>provided</scope>
-      <!-- Annotations useful only at compile time -->
-    </dependency>
-    <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
       <scope>provided</scope>
-      <!-- Provided by CraftBukkit at runtime -->
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
-      <!-- Useful only before compile time for code generation -->
     </dependency>
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
       <scope>provided</scope>
-      <!-- The server must be a Spigot one or a derivative one (e.g. PaperMC) -->
     </dependency>
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
       <scope>provided</scope>
-      <!-- Provided by CraftBukkit at runtime -->
     </dependency>
   </dependencies>
 
@@ -153,6 +137,7 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <configuration>
           <ignoredUnusedDeclaredDependencies combine.children="append">
+            <ignoredUnusedDeclaredDependency>com.google.guava:guava</ignoredUnusedDeclaredDependency>
             <ignoredUnusedDeclaredDependency>com.mysql:mysql-connector-j</ignoredUnusedDeclaredDependency>
             <ignoredUnusedDeclaredDependency>org.xerial:sqlite-jdbc</ignoredUnusedDeclaredDependency>
           </ignoredUnusedDeclaredDependencies>
