--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -36,6 +36,7 @@
   <description>The Bukkit modules related to the place-and-break patch</description>
 
   <modules>
+    <module>bukkit-listener</module>
     <module>bukkit-patch-adapter</module>
     <module>bukkit-plugin</module>
     <module>bukkit-slf4j</module>
@@ -54,14 +55,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.github.Zrips</groupId>
-        <artifactId>Jobs</artifactId>
-        <version>${jobsReborn.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.mysql</groupId>
         <artifactId>mysql-connector-j</artifactId>
         <version>${mysql.version}</version>
+        <scope>provided</scope>
+        <!-- Provided by CraftBukkit at runtime -->
       </dependency>
       <dependency>
         <groupId>org.bstats</groupId>
@@ -69,11 +67,32 @@
         <version>${bstat.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.spongepowered</groupId>
+        <artifactId>configurate-yaml</artifactId>
+        <version>${configurate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>${sqlite.version}</version>
+        <scope>provided</scope>
+        <!-- Provided by CraftBukkit at runtime -->
+      </dependency>
+      <dependency>
+        <groupId>com.github.Zrips</groupId>
+        <artifactId>Jobs</artifactId>
+        <version>${jobsReborn.version}</version>
+        <scope>provided</scope>
+        <!-- Server must have JobsReborn plugin installed -->
+      </dependency>
+      <dependency>
         <groupId>org.spigotmc</groupId>
         <artifactId>spigot-api</artifactId>
         <version>${spigotApi.version}</version>
-        <!-- Unused dependencies -->
+        <scope>provided</scope>
+        <!-- The server must be a Spigot one or a derivative one (e.g. PaperMC) -->
         <exclusions>
+          <!-- Unused dependencies -->
           <exclusion>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -99,16 +118,6 @@
             <artifactId>ebean</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.spongepowered</groupId>
-        <artifactId>configurate-yaml</artifactId>
-        <version>${configurate.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.xerial</groupId>
-        <artifactId>sqlite-jdbc</artifactId>
-        <version>${sqlite.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
