build: restore build by fixing dependencies and deactivating JavaDoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -373,6 +373,8 @@
         <version>${mavenJavadocPlugin.version}</version>
         <configuration>
           <quiet>true</quiet>
+          <!-- TODO: reactive JavaDoc generation -->
+          <skip>true</skip>
         </configuration>
         <executions>
           <execution>
