ci(java): reestablish CI by bumping Java version of executors to 11

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,10 @@ version: 2.1
 executors:
   build-executor:
     docker:
-      - image: 'cimg/openjdk:8.0'
-    environment:
-      MAVEN_CLI_OPTS: '-Pcontinuous-integration -e -C --fail-at-end --no-transfer-progress'
-      POST_BUILD_MAVEN_CLI_OPS: '-Dmaven.compiler.useIncrementalCompilation=false'
-  sonar-executor:
-    docker:
       - image: 'cimg/openjdk:11.0'
     environment:
       MAVEN_CLI_OPTS: '-Pcontinuous-integration -e -C --fail-at-end --no-transfer-progress'
+      POST_BUILD_MAVEN_CLI_OPS: '-Dmaven.compiler.useIncrementalCompilation=false'
 
 jobs:
   build:
@@ -60,7 +55,7 @@ jobs:
           paths:
             - '*'
   sonar:
-    executor: sonar-executor
+    executor: build-executor
     steps:
       - attach_workspace:
           at: '~/project'
