--- a/bukkit/bukkit-patch-adapter/pom.xml
+++ b/bukkit/bukkit-patch-adapter/pom.xml
@@ -32,7 +32,7 @@
 
   <artifactId>bukkit-patch-adapter</artifactId>
   <packaging>jar</packaging>
-  <name>Bukkit Adapter</name>
+  <name>Bukkit Patch Adapter</name>
   <description>API of the place-and-break patch adapted for Bukkit</description>
 
   <properties>
