--- a/patch-place-break/patch-place-break-core/src/main/resources/config.yml
+++ b/patch-place-break/patch-place-break-core/src/main/resources/config.yml
@@ -2,42 +2,57 @@
 ### JobsReborn-PatchPlaceBreak ###
 ##################################
 
-# Define where to store and retrieve data.
+# Define where to store and retrieve data
 dataSource:
-  # The type of datasource to use.
+  # The type of datasource to use
   # Available types:
   # - SQLITE: use a local file as database (easy setup)
   # - MYSQL: use a MySQL database server (better performances)
   type: 'SQLITE'
 
-  # The table name where data will be stored.
+  # The table where data will be stored
+  # Value can't be empty or blank
   table: 'patch_place_break_tag'
 
-  # The DBMS server properties to establish connections.
-  # If type is set to 'SQLITE', this part can be safely ignored.
+  # The DBMS server properties to establish connections
+  # If type is set to 'SQLITE', this part can be safely ignored
   dbmsServer:
+    # Host properties of the DBMS server
     host:
+      # Hostname (an IP address (IPv4/IPv6) or a domain name)
+      # Value can't be empty or blank
       hostname: 'localhost'
+      # Port
+      # Accepted range values: [1-65535]
       port: 3306
+      # Whether an SSL/TLS communication must be established at connection time (more secure)
+      # Only boolean values accepted (true|false)
       isSslEnabled: true
+
+    # Credentials for authentication with the DBMS server
     credentials:
+      # User to use when connected to the DBMS server
+      # Value can't be empty or blank
       username: 'username'
+      # Password of the user (optional but highly recommended)
       password: 'password'
+
+    # The database to use on DBMS server
+    # Value can't be empty or blank
     database: 'database'
 
-  # Connection pool properties.
-  # This is reserved for advanced usage only.
-  # Change these settings only if you know what you are doing.
+  # Connection pool properties
+  # This is reserved for advanced usage only
+  # Change these settings only if you know what you are doing
   connectionPool:
-    # The connection timeout in milliseconds.
+    # The connection timeout in milliseconds
     # Corresponds to the maximum time the connection pool will wait to acquire a new connection
-    # from the DBMS server.
-    # Not applicable for SQLite.
+    # from the DBMS server
+    # Not applicable for SQLite
     # Accepted range values: [1-600000]
     connectionTimeout: 30000
 
-    # The number of DBMS connections in the pool.
-    # Could be best determined by the executing environment.
+    # The number of DBMS connections in the pool
+    # Could be best determined by the executing environment
     # Accepted range values: [1-100]
     poolSize: 10
-
