renovate(deps): deactivate plateformAutomerge option for auto-approval

--- a/renovate.json5
+++ b/renovate.json5
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  // All dependencies which can't be bumped unless by upgrading Java version are ignored
   "ignoreDeps": [
     "ch.qos.logback:logback-classic",
     "cimg/openjdk",
@@ -20,8 +21,7 @@
       "matchCurrentVersion": "!/^0/",
       "automerge": true,
       "automergeStrategy": "fast-forward",
-      "automergeType": "pr",
-      "platformAutomerge": true
+      "automergeType": "pr"
     }
   ]
 }
