--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 
   <licenses>
     <license>
-      <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
-      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+      <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
     </license>
   </licenses>
 
